# simpler

distributed/: CMakeLists.txt  README.md
distributed/include/: hccl_context.h  platform_backend.h
distributed/python/: distributed_runner.py  run_distributed_example.py
distributed/src/: distributed_worker.cpp  onboard_backend.cpp  sim_backend.cpp
distributed/tests/: test_sim_e2e.sh
examples/a2a3/aicpu_build_graph/treduce_distributed/kernels/: kernel_config.py
examples/a2a3/aicpu_build_graph/treduce_distributed/kernels/orchestration/: treduce_orch.cpp
examples/a2a3/host_build_graph/treduce_distributed/: golden.py
examples/a2a3/host_build_graph/treduce_distributed/kernels/: kernel_config.py
examples/a2a3/host_build_graph/treduce_distributed/kernels/orchestration/: treduce_orch.cpp
examples/a2a3/tensormap_and_ringbuffer/async_completion_demo/kernels/orchestration/: async_demo_orchestration.cpp
examples/a2a3/tensormap_and_ringbuffer/treduce_distributed/kernels/: kernel_config.py
examples/a2a3/tensormap_and_ringbuffer/treduce_distributed/kernels/aiv/: treduce_kernel.cpp
examples/a2a3/tensormap_and_ringbuffer/treduce_distributed/kernels/orchestration/: treduce_orch.cpp
examples/scripts/: code_runner.py  run_example.py
python/: base_runner.py  distributed_runner.py
src/a2a3/runtime/tensormap_and_ringbuffer/aicpu/: aicpu_executor.cpp
src/a2a3/runtime/tensormap_and_ringbuffer/host/: runtime_maker.cpp
src/a2a3/runtime/tensormap_and_ringbuffer/orchestration/: pto_orchestration_api.h
src/a2a3/runtime/tensormap_and_ringbuffer/runtime/: pto_orchestrator.cpp  pto_orchestrator.h  pto_runtime2.h  pto_runtime2_types.h  runtime.cpp  runtime.h
src/a5/runtime/host_build_graph/aicore/: aicore_executor.cpp
